# readability-score

./: README.md  pyproject.toml
src/: automatic_readability_evaluator.py  dale_chall_readability_evaluator.py  flesch_kincaid_readability_evaluator.py  main.py  readability_evaluation_result.py  readability_evaluator.py  readability_tokenizer.py  tokenized_sentence.py  tokenized_text.py
